--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
 		}
 	],
 	"require": {
-		"yiisoft/yii2": "*",
-  	    "bower-asset/growl": "1.3.1",
-	    "bower-asset/noty": "2.3.7"
+		"yiisoft/yii2": "*"
 	},
     "autoload": {
         "psr-4": {
