--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,30 @@
 {
-	"name": "machour/yii2-notifications",
-	"description": "Notifications for your Yii2 app",
-  	"keywords": ["yii", "notification", "growl", "noty", "notify"],
-	"type": "yii2-extension",
-	"support": {
-		"source": "https://github.com/machour/yii2-notifications"
-	},
-	"authors": [
-		{
-			"name": "Mehdi Achour",
-			"email": "machour@gmail.com"
-		}
-	],
-	"require": {
-		"yiisoft/yii2": "*",
-		"rmrevin/yii2-fontawesome": "~2.15"
-	},
-	"autoload": {
-		"psr-4": {
-			"machour\\yii2\\notifications\\": ""
-		}
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "1.0-dev"
-		}
-	}
+    "name": "machour/yii2-notifications",
+    "description": "Notifications for your Yii2 app",
+      "keywords": ["yii", "notification", "growl", "noty", "notify"],
+    "type": "yii2-extension",
+    "license": "MIT",
+    "support": {
+        "source": "https://github.com/machour/yii2-notifications"
+    },
+    "authors": [
+        {
+            "name": "Mehdi Achour",
+            "email": "machour@gmail.com"
+        }
+    ],
+    "require": {
+        "yiisoft/yii2": "*",
+        "rmrevin/yii2-fontawesome": "~2.15"
+    },
+    "autoload": {
+        "psr-4": {
+            "machour\\yii2\\notifications\\": ""
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    }
 }
